fixed content spacing on phones 2

--- a/src/styles/components/_content-lockup.styl
+++ b/src/styles/components/_content-lockup.styl
@@ -23,7 +23,7 @@
 
   @media mq-phone-lg {
     height: auto;
-    min-height: 211px;
+    min-height: 232px;
   }
 
   &:first-of-type {
